# TrabalhoParadigma01

./: PlanilhaGastos.xlsx  PlanilhaGastos2.xlsx  README.md  Relatório.txt  main.py  pyproject.toml  rascunho.pl
app/: __init__.py  __main__.py
app/prolog/: rules.BAK  rules.pl
engine/: rascunho.BAK
test/: PlanilhaGastos.xlsx  PlanilhaGastos2.xlsx  rascunho.BAK  rascunho.pl  teste1.csv
